src/Parser/GraphLangParser.py
# Generated from src/utils/GraphLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GraphLangParser ( Parser ):

    grammarFileName = "GraphLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'IMPRIMIR'", "'('", "')'", "'FORMA'", 
                     "'{'", "'}'", "'TRANSFORMACION'", "'ESCENA'", "'FORMAS:'", 
                     "'['", "','", "']'", "'SI'", "'SINO'", "'MIENTRAS'", 
                     "'PARA'", "'ENTERO'", "'DECIMAL'", "'BOOLEANO'", "'CADENA'", 
                     "'CIRCULO'", "'CUADRADO'", "'RECTANGULO'", "'TRIANGULO'", 
                     "'tipo:'", "'radio:'", "'ancho:'", "'alto:'", "'vertex:'", 
                     "'trasladar:'", "'rotar:'", "'+='", "'-='", "'*='", 
                     "'/='", "'='", "'+'", "'-'", "'*'", "'/'", "'++'", 
                     "'--'", "'&&'", "'||'", "'=='", "'!='", "'>'", "'<'", 
                     "'>='", "'<='", "<INVALID>", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "FIN", 
                      "ENTERO", "DECIMAL", "BOOLEANO", "CADENA", "ESPACIOS" ]

    RULE_programa = 0
    RULE_declaraciones = 1
    RULE_sentencia = 2
    RULE_declaracionVariable = 3
    RULE_declaracionIncremental = 4
    RULE_imprimir = 5
    RULE_declaracionForma = 6
    RULE_declaracionTransformacion = 7
    RULE_declaracionEscena = 8
    RULE_estructuraControl = 9
    RULE_sentenciaIf = 10
    RULE_sentenciaWhile = 11
    RULE_sentenciaFor = 12
    RULE_bloque = 13
    RULE_expresion = 14
    RULE_expresionComparativa = 15
    RULE_expresionOperacional = 16
    RULE_expresionAritmetica = 17
    RULE_tipo = 18
    RULE_tipoForma = 19
    RULE_definicionForma = 20
    RULE_definicionTransformacion = 21
    RULE_opAsignacion = 22
    RULE_opAritmetico = 23
    RULE_opIncrementales = 24
    RULE_opLogico = 25
    RULE_opComparacion = 26
    RULE_literal = 27
    RULE_numero = 28

    ruleNames =  [ "programa", "declaraciones", "sentencia", "declaracionVariable", 
                   "declaracionIncremental", "imprimir", "declaracionForma", 
                   "declaracionTransformacion", "declaracionEscena", "estructuraControl", 
                   "sentenciaIf", "sentenciaWhile", "sentenciaFor", "bloque", 
                   "expresion", "expresionComparativa", "expresionOperacional", 
                   "expresionAritmetica", "tipo", "tipoForma", "definicionForma", 
                   "definicionTransformacion", "opAsignacion", "opAritmetico", 
                   "opIncrementales", "opLogico", "opComparacion", "literal", 
                   "numero" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    ID=51
    FIN=52
    ENTERO=53
    DECIMAL=54
    BOOLEANO=55
    CADENA=56
    ESPACIOS=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(GraphLangParser.EOF, 0)

        def declaraciones(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphLangParser.DeclaracionesContext)
            else:
                return self.getTypedRuleContext(GraphLangParser.DeclaracionesContext,i)


        def sentencia(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphLangParser.SentenciaContext)
            else:
                return self.getTypedRuleContext(GraphLangParser.SentenciaContext,i)


        def getRuleIndex(self):
            return GraphLangParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = GraphLangParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 400) != 0):
                self.state = 58
                self.declaraciones()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2251799815757826) != 0):
                self.state = 64
                self.sentencia()
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 70
            self.match(GraphLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracionForma(self):
            return self.getTypedRuleContext(GraphLangParser.DeclaracionFormaContext,0)


        def declaracionTransformacion(self):
            return self.getTypedRuleContext(GraphLangParser.DeclaracionTransformacionContext,0)


        def declaracionEscena(self):
            return self.getTypedRuleContext(GraphLangParser.DeclaracionEscenaContext,0)


        def getRuleIndex(self):
            return GraphLangParser.RULE_declaraciones

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaraciones" ):
                listener.enterDeclaraciones(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaraciones" ):
                listener.exitDeclaraciones(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaraciones" ):
                return visitor.visitDeclaraciones(self)
            else:
                return visitor.visitChildren(self)




    def declaraciones(self):

        localctx = GraphLangParser.DeclaracionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaraciones)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.declaracionForma()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.declaracionTransformacion()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.declaracionEscena()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracionVariable(self):
            return self.getTypedRuleContext(GraphLangParser.DeclaracionVariableContext,0)


        def estructuraControl(self):
            return self.getTypedRuleContext(GraphLangParser.EstructuraControlContext,0)


        def expresionOperacional(self):
            return self.getTypedRuleContext(GraphLangParser.ExpresionOperacionalContext,0)


        def expresionAritmetica(self):
            return self.getTypedRuleContext(GraphLangParser.ExpresionAritmeticaContext,0)


        def imprimir(self):
            return self.getTypedRuleContext(GraphLangParser.ImprimirContext,0)


        def getRuleIndex(self):
            return GraphLangParser.RULE_sentencia

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentencia" ):
                listener.enterSentencia(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentencia" ):
                listener.exitSentencia(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentencia" ):
                return visitor.visitSentencia(self)
            else:
                return visitor.visitChildren(self)




    def sentencia(self):

        localctx = GraphLangParser.SentenciaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_sentencia)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 77
                self.declaracionVariable()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.estructuraControl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.expresionOperacional()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.expresionAritmetica()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 81
                self.imprimir()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionVariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(GraphLangParser.TipoContext,0)


        def ID(self):
            return self.getToken(GraphLangParser.ID, 0)

        def opAsignacion(self):
            return self.getTypedRuleContext(GraphLangParser.OpAsignacionContext,0)


        def literal(self):
            return self.getTypedRuleContext(GraphLangParser.LiteralContext,0)


        def FIN(self):
            return self.getToken(GraphLangParser.FIN, 0)

        def getRuleIndex(self):
            return GraphLangParser.RULE_declaracionVariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionVariable" ):
                listener.enterDeclaracionVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionVariable" ):
                listener.exitDeclaracionVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionVariable" ):
                return visitor.visitDeclaracionVariable(self)
            else:
                return visitor.visitChildren(self)




    def declaracionVariable(self):

        localctx = GraphLangParser.DeclaracionVariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaracionVariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.tipo()
            self.state = 85
            self.match(GraphLangParser.ID)
            self.state = 86
            self.opAsignacion()
            self.state = 87
            self.literal()
            self.state = 88
            self.match(GraphLangParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionIncrementalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GraphLangParser.ID, 0)

        def opIncrementales(self):
            return self.getTypedRuleContext(GraphLangParser.OpIncrementalesContext,0)


        def getRuleIndex(self):
            return GraphLangParser.RULE_declaracionIncremental

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionIncremental" ):
                listener.enterDeclaracionIncremental(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionIncremental" ):
                listener.exitDeclaracionIncremental(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionIncremental" ):
                return visitor.visitDeclaracionIncremental(self)
            else:
                return visitor.visitChildren(self)




    def declaracionIncremental(self):

        localctx = GraphLangParser.DeclaracionIncrementalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaracionIncremental)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(GraphLangParser.ID)
            self.state = 91
            self.opIncrementales()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImprimirContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIN(self):
            return self.getToken(GraphLangParser.FIN, 0)

        def literal(self):
            return self.getTypedRuleContext(GraphLangParser.LiteralContext,0)


        def ID(self):
            return self.getToken(GraphLangParser.ID, 0)

        def getRuleIndex(self):
            return GraphLangParser.RULE_imprimir

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImprimir" ):
                listener.enterImprimir(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImprimir" ):
                listener.exitImprimir(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImprimir" ):
                return visitor.visitImprimir(self)
            else:
                return visitor.visitChildren(self)




    def imprimir(self):

        localctx = GraphLangParser.ImprimirContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_imprimir)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(GraphLangParser.T__0)
            self.state = 94
            self.match(GraphLangParser.T__1)
            self.state = 97
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [53, 54, 55, 56]:
                self.state = 95
                self.literal()
                pass
            elif token in [51]:
                self.state = 96
                self.match(GraphLangParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 99
            self.match(GraphLangParser.T__2)
            self.state = 100
            self.match(GraphLangParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionFormaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GraphLangParser.ID, 0)

        def FIN(self):
            return self.getToken(GraphLangParser.FIN, 0)

        def definicionForma(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphLangParser.DefinicionFormaContext)
            else:
                return self.getTypedRuleContext(GraphLangParser.DefinicionFormaContext,i)


        def getRuleIndex(self):
            return GraphLangParser.RULE_declaracionForma

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionForma" ):
                listener.enterDeclaracionForma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionForma" ):
                listener.exitDeclaracionForma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionForma" ):
                return visitor.visitDeclaracionForma(self)
            else:
                return visitor.visitChildren(self)




    def declaracionForma(self):

        localctx = GraphLangParser.DeclaracionFormaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_declaracionForma)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(GraphLangParser.T__3)
            self.state = 103
            self.match(GraphLangParser.ID)
            self.state = 104
            self.match(GraphLangParser.T__4)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1040187392) != 0):
                self.state = 105
                self.definicionForma()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 111
            self.match(GraphLangParser.T__5)
            self.state = 112
            self.match(GraphLangParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionTransformacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(GraphLangParser.ID, 0)

        def FIN(self):
            return self.getToken(GraphLangParser.FIN, 0)

        def definicionTransformacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphLangParser.DefinicionTransformacionContext)
            else:
                return self.getTypedRuleContext(GraphLangParser.DefinicionTransformacionContext,i)


        def getRuleIndex(self):
            return GraphLangParser.RULE_declaracionTransformacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionTransformacion" ):
                listener.enterDeclaracionTransformacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionTransformacion" ):
                listener.exitDeclaracionTransformacion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionTransformacion" ):
                return visitor.visitDeclaracionTransformacion(self)
            else:
                return visitor.visitChildren(self)




    def declaracionTransformacion(self):

        localctx = GraphLangParser.DeclaracionTransformacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_declaracionTransformacion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(GraphLangParser.T__6)
            self.state = 115
            self.match(GraphLangParser.ID)
            self.state = 116
            self.match(GraphLangParser.T__4)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30 or _la==31:
                self.state = 117
                self.definicionTransformacion()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 123
            self.match(GraphLangParser.T__5)
            self.state = 124
            self.match(GraphLangParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionEscenaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(GraphLangParser.ID)
            else:
                return self.getToken(GraphLangParser.ID, i)

        def FIN(self):
            return self.getToken(GraphLangParser.FIN, 0)

        def getRuleIndex(self):
            return GraphLangParser.RULE_declaracionEscena

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracionEscena" ):
                listener.enterDeclaracionEscena(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracionEscena" ):
                listener.exitDeclaracionEscena(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracionEscena" ):
                return visitor.visitDeclaracionEscena(self)
            else:
                return visitor.visitChildren(self)




    def declaracionEscena(self):

        localctx = GraphLangParser.DeclaracionEscenaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_declaracionEscena)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(GraphLangParser.T__7)
            self.state = 127
            self.match(GraphLangParser.T__4)
            self.state = 128
            self.match(GraphLangParser.T__8)
            self.state = 129
            self.match(GraphLangParser.T__9)
            self.state = 130
            self.match(GraphLangParser.ID)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 131
                self.match(GraphLangParser.T__10)
                self.state = 132
                self.match(GraphLangParser.ID)
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(GraphLangParser.T__11)
            self.state = 139
            self.match(GraphLangParser.T__5)
            self.state = 140
            self.match(GraphLangParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstructuraControlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentenciaIf(self):
            return self.getTypedRuleContext(GraphLangParser.SentenciaIfContext,0)


        def sentenciaWhile(self):
            return self.getTypedRuleContext(GraphLangParser.SentenciaWhileContext,0)


        def sentenciaFor(self):
            return self.getTypedRuleContext(GraphLangParser.SentenciaForContext,0)


        def getRuleIndex(self):
            return GraphLangParser.RULE_estructuraControl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstructuraControl" ):
                listener.enterEstructuraControl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstructuraControl" ):
                listener.exitEstructuraControl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstructuraControl" ):
                return visitor.visitEstructuraControl(self)
            else:
                return visitor.visitChildren(self)




    def estructuraControl(self):

        localctx = GraphLangParser.EstructuraControlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_estructuraControl)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.sentenciaIf()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.sentenciaWhile()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 144
                self.sentenciaFor()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaIfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(GraphLangParser.ExpresionContext,0)


        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GraphLangParser.BloqueContext)
            else:
                return self.getTypedRuleContext(GraphLangParser.BloqueContext,i)


        def getRuleIndex(self):
            return GraphLangParser.RULE_sentenciaIf

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaIf" ):
                listener.enterSentenciaIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaIf" ):
                listener.exitSentenciaIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentenciaIf" ):
                return visitor.visitSentenciaIf(self)
            else:
                return visitor.visitChildren(self)




    def sentenciaIf(self):

        localctx = GraphLangParser.SentenciaIfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_sentenciaIf)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(GraphLangParser.T__12)
            self.state = 148
            self.match(GraphLangParser.T__1)
            self.state = 149
            self.expresion()
            self.state = 150
            self.match(GraphLangParser.T__2)
            self.state = 151
            self.bloque()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 152
                self.match(GraphLangParser.T__13)
                self.state = 153
                self.bloque()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaWhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresionComparativa(self):
            return self.getTypedRuleContext(GraphLangParser.ExpresionComparativaContext,0)


        def bloque(self):
            return self.getTypedRuleContext(GraphLangParser.BloqueContext,0)


        def getRuleIndex(self):
            return GraphLangParser.RULE_sentenciaWhile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaWhile" ):
                listener.enterSentenciaWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaWhile" ):
                listener.exitSentenciaWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentenciaWhile" ):
                return visitor.visitSentenciaWhile(self)
            else:
                return visitor.visitChildren(self)




    def sentenciaWhile(self):

        localctx = GraphLangParser.SentenciaWhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_sentenciaWhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(GraphLangParser.T__14)
            self.state = 157
            self.match(GraphLangParser.T__1)
            self.state = 158
            self.expresionComparativa()
            self.state = 159
            self.match(GraphLangParser.T__2)
            self.state = 160
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenciaForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracionVariable(self):
            return self.getTypedRuleContext(GraphLangParser.DeclaracionVariableContext,0)


        def FIN(self, i:int=None):
            if i is None:
                return self.getTokens(GraphLangParser.FIN)
            else:
                return self.getToken(GraphLangParser.FIN, i)

        def expresionComparativa(self):
            return self.getTypedRuleContext(GraphLangParser.ExpresionComparativaContext,0)


        def declaracionIncremental(self):
            return self.getTypedRuleContext(GraphLangParser.DeclaracionIncrementalContext,0)


        def bloque(self):
            return self.getTypedRuleContext(GraphLangParser.BloqueContext,0)


        def getRuleIndex(self):
            return GraphLangParser.RULE_sentenciaFor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSentenciaFor" ):
                listener.enterSentenciaFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSentenciaFor" ):
                listener.exitSentenciaFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSentenciaFor" ):
                return visitor.visitSentenciaFor(self)
            else:
                return visitor.visitChildren(self)




    def sentenciaFor(self):
